--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,11 +11,24 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - run: echo world
+  jobs:
+    build:
+      docker:
+        - image: cimg/base:2020.01
+      steps:
+        - checkout
+        - run:
+            name: "echo an env var that is part of our project"
+            command: |
+              echo $myenv
+
+
 workflows:
   # Name the workflow "welcome"
   welcome:
     # Run the welcome/run job in its own container
     jobs:
+      - build
       - print_hello
       - print_world:
           requires:
