--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
   jobs:
     build:
       docker:
-        - image: cimg/base:2020.01
+        - image: circleci/node:13.8.0
       steps:
         - checkout
         - run:
